@@ -2,6 +2,7 @@ package framework.pages;
 
 import java.math.BigDecimal;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -11,8 +12,8 @@ import org.openqa.selenium.WebElement;
 public class HomeSauceDemoPage extends BasePage{
 	
 	private By cmbFiltroProdutos = By.cssSelector(".select_container > .product_sort_container");
-	private By lblNomeProdutos = By.cssSelector(".inventory_item_label > .inventory_item_name");
-	private By lblValorProdutos = By.cssSelector(".inventory_item_label > .inventory_item_value");
+	private By lblNomeProdutos = By.cssSelector(".inventory_item_label .inventory_item_name");
+	private By lblValorProdutos = By.cssSelector(".inventory_item .pricebar > .inventory_item_price");
 	private List<WebElement> listElements;
 	private List<String> listaNomesProdutos;
 	private List<BigDecimal> listaValores;
@@ -38,25 +39,27 @@ public class HomeSauceDemoPage extends BasePage{
 			List<String> valoresTemp = getListaDeTextosAPartirDeWebElement(
 					esperarListaDeElementosVisiveis(lblValorProdutos));
 			
-			valoresTemp.stream().map(item -> item.replace("US$", ""));
+			valoresTemp = valoresTemp.stream().map(item -> item.replace("$", "")).toList();
 			
-			listaValores = valoresTemp.stream().map(BigDecimal::new).collect(Collectors.toList());
+			listaValores = valoresTemp.stream().map(BigDecimal::new).toList();
 		}
 		
 	}
 	
 	public boolean validarOrdenacaoNome(boolean ascendente) {
 		
-		if (ascendente)
+		if (ascendente) 
 			Collections.sort(listaNomesProdutos);
-		else
+		else 
 			Collections.sort(listaNomesProdutos, Collections.reverseOrder());
 		
 		int posicao = 0;
 		
+		
 		listElements = esperarListaDeElementosVisiveis(lblNomeProdutos);
 		
 		for(WebElement elem : listElements) {
+			
 			if (!elem.getText().equals(listaNomesProdutos.get(posicao))) {
 				return false;
 			}
@@ -67,20 +70,22 @@ public class HomeSauceDemoPage extends BasePage{
 	
 	public boolean validarOrdenacaoValores(boolean ascendente) {
 		if (ascendente)
-			listaValores.sort(null);
+			listaValores = listaValores.stream().sorted(Comparator.naturalOrder()).toList();
 		else
-			listaValores.sort(Collections.reverseOrder());
+			listaValores = listaValores.stream().sorted(Comparator.reverseOrder()).toList();
 		
 		int posicao = 0;
 		
 		listElements = esperarListaDeElementosVisiveis(lblValorProdutos);
 		
 		for(WebElement elem : listElements) {
-			if (!new BigDecimal(elem.getText().replace("US$", ""))
-					.equals(listaValores.get(posicao))) {
+			
+			if (!(listaValores.get(posicao).compareTo(new BigDecimal(
+					elem.getText().replace("$", ""))) == 0)) {
 				return false;
 			}
 			posicao+= 1;
+		
 		}
 		return true;
 	}
